--- a/GUI/index.htm
+++ b/GUI/index.htm
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="js/highcharts.js"></script>
         <script type="text/javascript" src="js/modules/data.js"></script>
+        <script src="/js/themes/dark-unica.js"></script>
 
 		<style type="text/css">
 ${demo.css}
